# parte

./: LICENSE  README.md  meson.build
.github/workflows/: main.yml
data/: parte.desktop
src/: Application.vala  MainWindow.vala
src/Utils/: DisplayNetwork.vala  GTFStandard.vala  VirtualDisplayEnvironment.vala  VirtualDisplayServer.vala  VirtualDisplayViewer.vala  VolatileDataStore.json  VolatileDataStore.vala
src/Widgets/: ConnectionStatus.vala  DisplayConnected.vala  DisplayDiscovery.vala  DisplayPairRow.vala  SecondaryDisplay.vala  StatusMessage.vala
